@@ -1,5 +1,11 @@
 2003-02-21  Vince Darley <vincentdarley@sourceforge.net>
 
+	* doc/vvs.n:
+	* library/*.tcl: added missing 'recursive' flag to most
+        .tcl 'removedirectory' implementations.
+	
+2003-02-21  Vince Darley <vincentdarley@sourceforge.net>
+
 	* generic/vfs.c: some small cleanup
 	* doc/vfs.n: better documentation for 'createdirectory'
 	* library/mk4vfs.tcl: better posix adherence.
